# Life

./: CMakeLists.txt  Render.h  life.cpp  life.h  main.cpp  main.h  main.hpp
UI/: Buttons.cpp  Buttons.h  Qt.h
